--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout master
         uses: actions/checkout@v1
 
-      - name: Deploy the site
+      - name: Deploy the hugo site
         uses: benmatselby/hugo-deploy-gh-pages@master
         env:
           HUGO_VERSION: 0.57.2
