--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Deploy the hugo site
-        uses: benmatselby/hugo-deploy-gh-pages@master
+        uses: peaceiris/actions-gh-pages@v2.3.1
         env:
-          HUGO_VERSION: 0.57.2
-          TARGET_REPO: ApplyBoard/ab-hugo.git
-          TOKEN: ${{ secrets.TOKEN }}
+         ACTIONS_DEPLOY_KEY: ${{ secrets.TOKEN }}
+         PUBLISH_BRANCH: master
+         PUBLISH_DIR: ./public
