--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Deploy the hugo site
-        uses: peaceiris/actions-gh-pages@v2.3.1
+        uses: benmatselby/hugo-deploy-gh-pages@master
         env:
-         ACTIONS_DEPLOY_KEY: ${{ secrets.TOKEN }}
-         PUBLISH_BRANCH: master
-         PUBLISH_DIR: ./public
+          HUGO_VERSION: 0.58.2
+          TARGET_REPO: benmatselby/benmatselby.github.io
+          TOKEN: ${{ secrets.TOKEN }}
