--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
 baseURL = "http://example.org/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Welcome to ApplyBoard Cloud (ABC) Devops"
+publishDir = "docs"
 theme = "ananke"
