--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/hugo-now"]
 	path = themes/hugo-now
-	url = git@github.com:mikeblum/hugo-now.git
+	url = https://github.com/mikeblum/hugo-now.git
