--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,9 @@ jobs:
         uses: actions/checkout@v1
         with:
           submodules: true
+      
+      - name: Reattach HEAD
+        run: git checkout "$(echo ${{ github.ref }} | sed -E 's|refs/[a-zA-Z]+/||')"
 
       - name: Deploy the hugo site
         uses: jayat-ab/hugo-deploy-gh-pages@master
