--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,13 +9,13 @@ jobs:
     name: Deploy
     runs-on: ubuntu-18.04
     steps:
+      - name: Prepare repository
+        run: git checkout "${GITHUB_REF:11}"
+      
       - name: Checkout master
         uses: actions/checkout@v1
         with:
           submodules: true
-      
-      - name: Reattach HEAD
-        run: git checkout "$(echo ${{ github.ref }} | sed -E 's|refs/[a-zA-Z]+/||')"
 
       - name: Deploy the hugo site
         uses: jayat-ab/hugo-deploy-gh-pages@master
