--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.applyboard.com"
+baseURL = "//www.applyboard.com/"
 languageCode = "en-us"
 title = "Welcome to ApplyBoard Cloud (ABC) DevOps"
 publishDir = "docs"
