--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           submodules: true
 
-      - name: Deploy the hugo site
+      - name: Deploy hugo site
         uses: jayat-ab/hugo-deploy-gh-pages@master
         env:
           HUGO_VERSION: 0.58.2
