--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,4 @@ jobs:
         uses: maxheld83/ghpages@master
         env:
           BUILD_DIR: "public/"
-        secrets: ["GH_PAT"]  
+        secrets: ${{ secrets.GH_PAT }}
