--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
           submodules: true
 
       - name: Deploy hugo site
-        uses: maxheld83/ghpages@master
+        uses: maxheld83/ghpages@v0.2.1
         env:
           BUILD_DIR: "public/"
-        secrets: ${{ secrets.GH_PAT }}
+          GH_PAT: ${{ secrets.GH_PAT }}
