--- a/config.toml
+++ b/config.toml
@@ -4,38 +4,22 @@ title = "Welcome to ApplyBoard Cloud (ABC) DevOps"
 publishDir = "public"
 theme = "hugo-now"
 #themesDir = "themes/"
-
-MetaDataFormat = "yaml"
-DefaultContentLanguage = "en"
-SectionPagesMenu = "main"
-googleAnalytics = ""
-enableRobotsTXT = true
-mainSections = ["post", "project"]
+# google analytics
+GoogleAnalytics = "UA-XXXXXX"
 
 [taxonomies]
   category = "categories"
   tag = "tags"
 
 [params]
-  favicon = ""
   description = "Awesome DevOps"
+  author = "Hugo Now"
   keywords = ["hugo-now", "hugo"]
   avatar = "/images/AB.jpg"
+  displayauthor = false
   # pygments
   PygmentsUseClasses = true
   PygmentsCodeFences = true
   # pagination
   paginate = 10
   paginatePath = "page"
-  facebook = ""
-  twitter = "https://twitter.com/GoHugoIO"
-  instagram = ""
-  youtube = ""
-  github = ""
-  gitlab = ""
-  linkedin = ""
-  mastodon = ""
-  # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
-  background_color_class = "bg-black"
-  featured_image = "/images/gohugo-default-sample-hero-image.jpg"
-  recent_posts_number = 2
